test/corpus/content.txt
=================
component - string content
=================

(component foo []
	"quoted content"
	-- line content
	)

-----------------

(source_file
	(component_declaration
		(identifier)
		(properties)
		(template
			(string)
			(string))))

=================
document - string content
=================

(document foo []
	"quoted content"
	-- line content
	)

-----------------

(source_file
	(document_declaration
		(identifier)
		(properties)
		(template
			(string)
			(string))))

=================
element - quoted string content
=================

(foo "quoted content")

-----------------

(source_file
	(element
		(identifier)
		(children
			(string))))

=================
element - line string content
=================

(foo -- quoted content
	)

-----------------

(source_file
	(element
		(identifier)
		(children
			(string))))

=================
component - content - element
=================

(component foo [] (foo))

-----------------

(source_file
	(component_declaration
		(identifier)
		(properties)
		(template
			(element (identifier)))))

=================
document - content - element
=================

(document foo [] (foo))

-----------------

(source_file
	(document_declaration
		(identifier)
		(properties)
		(template
			(element (identifier)))))

=================
element - content - element
=================

(foo {} (foo))

-----------------

(source_file
	(element
		(identifier)
		(attributes)
		(children
			(element (identifier)))))
