test/corpus/declaration.txt
======================
comment
======================

// a comment

----------------------

(source_file (comment))

======================
package declaration
======================

(package p "component/main")

----------------------

(source_file
	(package_declaration
		name: (identifier)
		path: (string)))

======================
package declaration: invalid name
:error
======================

(package p/a "path/to/package")

----------------------

======================
package declaraton: invalid path
:error
======================

(package p -- path/to/package
)

----------------------

======================
import declaration
======================

(import i "path/to/package")
(import i "path/to/package")

----------------------

(source_file
	(import_declaration
		name: (identifier)
		path: (string))
	(import_declaration
		name: (identifier)
		path: (string)))

======================
import declaration: invalid name
:error
======================

(import i/a "path/to/package")

----------------------

======================
import declaration: invalid path
:error
======================

(import i -- path/to/package
)

----------------------

======================
using declaration
======================

(import i "path/to/package")
(using s i)
(using [a b] i)
(using [a, b] i)
(using [a,] i)

----------------------

(source_file
	(import_declaration
		name: (identifier)
		path: (string))
	(using_declaration
		name: (identifier)
		from: (identifier))
	(using_declaration
		name: (identifier)
		name: (identifier)
		from: (identifier))
	(using_declaration
		name: (identifier)
		name: (identifier)
		from: (identifier))
	(using_declaration
		name: (identifier)
		from: (identifier)))

======================
using declaration: invalid name
:error
======================

(import i "path")
(using i/a i)

----------------------

======================
using declaration: invalid name
:error
======================

(import i "path")
(using [i/a] i)

----------------------

======================
using declaration: invalid name (from)
:error
======================

(import i "path")
(using a i/a)

----------------------
