test/corpus/element.txt
=================
element
=================

(component foo []
	(foo)
	(a/foo {})
	(foo { k: "v", })
	(foo { k: "v", a: "b" })
	(foo { k: "v"  a: "b" }))
-----------------

(source_file
	(component_declaration
		name: (identifier)
		(properties)
		(template
			(element tag: (identifier))
			(element
				tag: (member_access
					object: (identifier)
					member: (identifier))
				(attributes))
			(element
				tag: (identifier)
				(attributes
					(attribute
						key: (identifier)
						value: (string))))
			(element
				tag: (identifier)
				(attributes
					(attribute
						key: (identifier)
						value: (string))
					(attribute
						key: (identifier)
						value: (string))))
			(element
				tag: (identifier)
				(attributes
					(attribute
						key: (identifier)
						value: (string))
				(attribute
						key: (identifier)
						value: (string)))))))

=================
element - attribute directive
=================

(component foo []
	(foo #foo{})
	(foo #a/foo{}))

-----------------

(source_file
	(component_declaration
		name: (identifier)
		(properties)
		(template
			(element
				tag: (identifier)
				(attributes
					directive: (identifier)))
			(element
				tag: (identifier)
				(attributes
					directive: (member_access
						object: (identifier)
						member: (identifier)))))))

=================
element - multiple attributes
=================

(component foo []
	(foo {} {}))

-----------------

(source_file
	(component_declaration
		(identifier)
		(properties)
		(template
			(element
				(identifier)
				(attributes)
				(attributes)))))

=================
element - mixed attribute and content
=================

(component foo []
	(foo {}
		"foo"
		{}
		(foo)))

-----------------

(source_file
	(component_declaration
		(identifier)
		(properties)
		(template
			(element
				(identifier)
				(attributes)
				(children (string))
				(attributes)
				(children (element (identifier)))))))
