test/corpus/escape.txt
=====================
escaped template
=====================

(component Foo [] "foo \\(foo)")

---------------------

(program
	(component_declaration
		(identifier)
		(properties)
		(template
			(string))))
