test/corpus/expression.txt
===================
expression - bool
===================

(foo {a: true})

-------------------

(source_file
	(element
		(identifier)
		(attributes
			(attribute
				(identifier)
				(bool)))))

===================
expression - string
===================

(foo {a: "foo"})

-------------------

(source_file
	(element
		(identifier)
		(attributes
			(attribute
				(identifier)
				(string)))))
