test/corpus/if_expression.txt


==============================================
if expression - identifier
==============================================

(component foo []
	(foo {a: (if a "yes")}))

----------------------------------------------

(program
	(component_declaration
		name: (identifier)
		(properties)
		(template
			(element
				tag: (identifier)
				(children
					(attributes
						(attribute
							key: (identifier)
							value: (if_expression
								condition: (identifier)
								then: (string)))))))))


==============================================
if expression - true
==============================================

(component foo []
	(foo {a: (if true "yes")}))

----------------------------------------------

(program
	(component_declaration
		name: (identifier)
		(properties)
		(template
			(element
				tag: (identifier)
				(children
					(attributes
						(attribute
							key: (identifier)
							value: (if_expression
								condition: (bool)
								then: (string)))))))))

==============================================
if expression - false
==============================================

(component foo []
	(foo {a: (if false "yes" 0)}))

----------------------------------------------

(program
	(component_declaration
		name: (identifier)
		(properties)
		(template
			(element
				tag: (identifier)
				(children
					(attributes
						(attribute
							key: (identifier)
							value: (if_expression
								condition: (bool)
								then: (string)
								else: (number)))))))))

==============================================
conditional - element
==============================================

(component foo []
	(if c
		(div)))

----------------------------------------------

(program
	(component_declaration
		(identifier)
		(properties)
		(template
			(if_expression
				(identifier)
				(element (identifier))))))

==============================================
conditional - string
==============================================

(component foo []
	(if c
		"string"))

----------------------------------------------

(program
	(component_declaration
		(identifier)
		(properties)
		(template
			(if_expression
				(identifier)
				(string)))))

==============================================
conditional - string line
==============================================

(component foo []
	(if c
		-- line 1
		))

----------------------------------------------

(program
	(component_declaration
		(identifier)
		(properties)
		(template
			(if_expression
				(identifier)
				(string)))))

==============================================
conditional - else
==============================================

(component foo []
	(if c
		-- line 1
		(div)))

----------------------------------------------

(program
	(component_declaration
		name: (identifier)
		(properties)
		(template
			(if_expression
				condition: (identifier)
				then: (string)
				else: (element tag: (identifier))))))

==============================================
conditional - nested
==============================================

(document []
	(if f
		(div
			(if f (div)))
		(span)))

----------------------------------------------

(program
	(document_declaration
		(properties)
		(template
			(if_expression
				(identifier)
				(element (identifier)
					(children
						(if_expression
							(identifier)
							(element (identifier)))))
				(element (identifier))))))
