test/corpus/type.txt
==================
simple property type
==================

(document [p: A])

-----------------

(source_file
	(document_declaration
		(properties
			(property
				name: (identifier)
				type: (identifier)))))

==================
enum property type - string
==================

(document [p: (enum "A" "B")])

------------------

(source_file
	(document_declaration
		(properties
			(property
				name: (identifier)
				type: (enum
					constant: (string)
					constant: (string))))))

==================
enum property type - number
==================

(document [p: (enum 10 20)])

------------------

(source_file
	(document_declaration
		(properties
			(property
				name: (identifier)
				type: (enum
					constant: (number)
					constant: (number))))))

==================
component - simple property type
==================

(component C [p: A])

-----------------

(source_file
	(component_declaration
		name: (identifier)
		(properties
			(property
				name: (identifier)
				type: (identifier)))))

==================
component - enum property type - string
==================

(component C [p: (enum "A" "B")])

------------------

(source_file
	(component_declaration
		name: (identifier)
		(properties
			(property
				name: (identifier)
				type: (enum
					constant: (string)
					constant: (string))))))

==================
component - enum property type - number
==================

(component C [p: (enum 10 20)])

------------------

(source_file
	(component_declaration
		name: (identifier)
		(properties
			(property
				name: (identifier)
				type: (enum
					constant: (number)
					constant: (number))))))
